[package]
name = "pbgc"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
description = "Pulsar Blueprint Graph Compiler - Production-ready compiler for Blueprint visual scripts"
license = "MIT"

[dependencies]
# General graph compilation library
graphy =  { git = "https://github.com/Far-Beyond-Pulsar/Graphy", rev = "0cd1d0c0e8420757f98c480ab9c4ab28e2f63ae0" }

# NOTE: When using this in production, replace with actual pulsar-std dependency
# For now, this is a placeholder for the pulsar_std integration
# pulsar-std = { path = "../path/to/pulsar-std" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tracing-subscriber = "0.3"
